Minor header fix Added default letter spacing and line height

--- a/style.scss
+++ b/style.scss
@@ -4,6 +4,9 @@ html {
   background-color: aqua;
   color: var(--black-color);
   font: var(--font);
+
+  line-height: 150%;
+  letter-spacing: -0.01em;
 }
 
 body {
